--- a/fundooApp/templates/resetPassword.html
+++ b/fundooApp/templates/resetPassword.html
@@ -8,7 +8,8 @@
         <div ng-message="['minlength']">You must enter valid password</div>
       </div>
       <div layout-align="center center">
-        <md-button ng-click="resetModel()" class="md-raised" id="button" style="margin:auto;display:block">submit</md-button>
+        <md-button ng-click="resetModel();" class="md-raised" id="button" style="margin:auto;display:block">submit</md-button>
+
       </div>
     </md-input-container>
   </form>
