--- a/fundooApp/templates/collaborator.html
+++ b/fundooApp/templates/collaborator.html
@@ -4,26 +4,46 @@
 <div><strong>Collaborator</strong></div>
 <md-divider></md-divider>
 <div layout="row">
-  <div style="width:40px;height:40px;border-radius:40px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; " >
-    <img src="{{userInfo.profilepicImage}}" style="width:100%;border-radius:50%">
-   </div>
-   <div layout="column" style="margin-top:5px">
-   <div style="padding-left:16px;"><strong>{{userInfo.firstname}} {{userInfo.lastname}} </strong></div>
-  <div style="padding-left:16px;"> {{userInfo.emailId}} (Owner)</div>
+<div>
+  <img
+    style="border-radius: 50%; margin: -1px 1px 14px -1px; height: 40px; width: 40px; box-sizing: border-box;"
+    ng-src="{{userInfo.profilepicImage}}" />
 </div>
-</div>
+<div style="display: flex; padding: 5px;" >
 
- <div layout="row">
-  <div  layout="row" ng-repeat="user in noteoj.collaboratedUser " style="width:40px;height:40px;border-radius:50px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; ">
-<img src="{{user.profilepicImage}}"style="width:100%;border-radius:50%" >
-  <div style="margin-top:-29px;padding-left:57px;">{{user.emailId}}</div>
-<div style="margin-top:15px">
-  <span ng-click="removeCollaboratoronNote(user)"><img src="images/baseline-delete-24px.svg" style="margin-top:-37px;padding-left:355px;">cancel</i></span>
-  <md-tooltip>Remove collaborator</md-tooltip>
-
-</div>
+  <div style="font-size: 13px;">
+    <span style="font-weight: 700;"><strong>{{userInfo.firstname}} {{userInfo.lastname}}</strong></span> <span
+      style="font-style: italic; margin-left: 5px;">(Owner)</span>
+    <div style="color: rgba(0, 0, 0, .54);">{{userInfo.emailId}}</div>
   </div>
 </div>
+
+</div>
+</div>
+
+ <div layout="column" style="margin-top: -26px;margin-left: 23px;">
+   <div ng-repeat="user in noteoj.collaboratedUser" style="align-items: center; display: flex; padding: 5px;">
+
+   		<div class="mycollaborator">
+   			<div>
+   				<img
+   					style="border-radius: 50%; margin: -1px 1px 14px -1px; height: 40px; width: 40px; box-sizing: border-box;"
+   					ng-src="{{user.profilepicImage}}" />
+   			</div>
+   		</div>
+   		<div style="display: flex; padding: 5px;">
+   			<div style="font-size: 13px;">
+   				<span style="font-weight: 700;">{{user.firstname}} {{user.lastname}}</span>
+   				<div style="color: rgba(0, 0, 0, .54);">{{user.emailId}}</div>
+   			</div>
+   		</div>
+   		<md-button class="button"
+   				ng-click="removeCollaboratoronNote(user)"> <img
+   				src="images/baseline-delete-24px.svg" /> <md-tooltip>Delete</md-tooltip>
+   			</md-button>
+   	</div>
+  </div>
+
 
 <div layout="row">
   <div style="margin-top: 10px; ">
@@ -43,5 +63,88 @@
   <md-button ng-click="addCollaboratorOnNote(user);">Save</md-button>
 </div>
 
-</div>
+
 </md-dialog>
+
+
+<!-- <md-dialog aria-label="Label" class="label-dialog"
+	style="width:46%;min-height: 245px;"> <md-dialog-content>
+
+<div class="collaborator">Collaborators</div>
+<md-divider></md-divider>
+<div class="colla" ng-init="getLoginUser()">
+	<div style="align-items: center; display: flex; padding: 5px;" >
+
+		<div class="mycollaborator">
+			<div>
+				<img
+					style="border-radius: 50%; margin: -1px 1px 14px -1px; height: 40px; width: 40px; box-sizing: border-box;"
+					ng-src="{{userData.userProfile}}" />
+			</div>
+		</div>
+		<div style="display: flex; padding: 5px;" >
+
+			<div style="font-size: 13px;">
+				<span style="font-weight: 700;">{{userData.name}}</span> <span
+					style="font-style: italic; margin-left: 5px;">(Owner)</span>
+				<div style="color: rgba(0, 0, 0, .54);">{{userData.email}}</div>
+			</div>
+		</div>
+	</div>
+
+
+<div ng-repeat="user in note.collaboratedUser" style="align-items: center; display: flex; padding: 5px;">
+
+		<div class="mycollaborator">
+			<div>
+				<img
+					style="border-radius: 50%; margin: -1px 1px 14px -1px; height: 40px; width: 40px; box-sizing: border-box;"
+					ng-src="{{user.userProfile}}" />
+			</div>
+		</div>
+		<div style="display: flex; padding: 5px;">
+			<div style="font-size: 13px;">
+				<span style="font-weight: 700;">{{user.name}}</span>
+				<div style="color: rgba(0, 0, 0, .54);">{{user.email}}</div>
+			</div>
+		</div>
+		<md-button class="button"
+				ng-click="removeCollaboratoronNote(user)"> <img
+				src="images/baseline-close-24px.svg" /> <md-tooltip>Delete</md-tooltip>
+			</md-button>
+	</div>
+
+	<div class="div4">
+		<div class="div5">
+			<div>
+				<img style="opacity: 0.5; background-size: 28px 24px; width: 85%;"
+					src="images/outline-person_add-24px.svg" />
+			</div>
+		</div>
+		<div ng-init="getallUsers()">
+			<md-input-container> <md-select
+				style="outline:none;background-color: white;" type="text"
+				placeholder="Person or email to share with"
+				aria-label="Person or email to share with" ng-model="email"
+				maxlength="320" role="combobox" aria-autocomplete="list"
+				aria-haspopup="false" aria-expanded="false"> <md-option
+				ng-repeat="email in getUsers" ng-value="email">{{email[0]}}</md-option></md-input-container>
+
+			<md-button ng-click="addCollaboratorOnNote(email)" class="mybutton">
+			<img src="images/baseline-done-24px.svg" /> </md-button>
+
+		</div>
+	</div>
+</div>
+<div>
+	<div style="background-color: rgba(0, 0, 0, 0.07); text-align: right;">
+		<md-button class="md-button" ng-click="null"
+			style="margin-right: 2px;"> <Strong
+			style="font-size: 13px;">Cancel</Strong> </md-button>
+	</div>
+	<div>
+		<md-button class="md-button" style="margin: -60px 0px 8px 402px;">
+		<Strong style="font-size: 13px;">Save</Strong> </md-button>
+	</div>
+</div>
+</md-dialog-content> </md-dialog> -->
