--- a/fundooApp/templates/dashboard.html
+++ b/fundooApp/templates/dashboard.html
@@ -1,102 +1,112 @@
-<div id="sidenavId">
-
-  <div class="take_note">
+<div style="width:100%" layout="column" layout-align="center center">
+<div  id="sidenavId" style="width:70%" layout-align="center center">
+  <div layout = "row" style="width:800px" layout-align="center center" >
     <md-card class="notecard" ng-show="!showWhenClicked">
       <div layout="row" class="take-note-input">
-        <input type="text" placeholder="Take a note" class="placesize"  ng-click="showWhenClicked=true" />
+        <input type="text" placeholder="Take a note" class="placesize" ng-click="showWhenClicked=true" />
       </div>
     </md-card>
   </div>
 
   <div layout="row" layout-align="center center">
     <md-card ng-show="showWhenClicked" class="notecard">
-      <div layout="row" layout-align="end end">  <md-button class="md-icon-button"><img src="images/pin0.svg" >
-          <md-tooltip>pin</md-tooltip></md-button>
-    </div>
-       <div contenteditable class="intial-text" data-placeholder="Title" ng-model="title" style="margin-top:-38px;border:0px none;outline:none;padding-left: 10px;"></div>
-
-        <div contenteditable data-placeholder="Take a note..." ng-model="description" id="notecard1" ng-bind="note.description"  style="border:0px none;outline:none;margin-left:10px;" ></div>
-      <div><icon> </icon></div>
-      <div><md-button ng-click="showWhenClicked=false;noteModel()" id="close-btn">CLOSE</md-button></div>
+      <div layout="row" layout-align="end end">
+        <md-button class="md-icon-button"><img src="images/pin0.svg">
+          <md-tooltip>pin</md-tooltip>
+        </md-button>
+      </div>
+      <div contenteditable class="intial-text" data-placeholder="Title" ng-model="title" style="margin-top:-38px;border:0px none;outline:none;padding-left: 10px;"></div>
+      <div contenteditable data-placeholder="Take a note..." ng-model="description" id="notecard1" ng-bind="note.description" style="border:0px none;outline:none;margin-left:10px;"></div>
+      <div>
+        <icon> </icon>
+      </div>
+      <div>
+        <md-button ng-click="showWhenClicked=false;noteModel()" id="close-btn">CLOSE</md-button>
+      </div>
     </md-card>
   </div>
 
-    <div>
-       <md-subheader style="margin-left:290px;"><strong>Pinned</strong> </md-subheader>
-    </div>
-      <div  style="position:relative;" layout="row"  layout-align="center end" layout-wrap  data-ng-init="getAllNote()" class="pinclass">
-          <md-card class="dashboard"  style="background-color:{{note.color}};width:250px;"  ng-repeat="note in notes |filter:{trash:false,pin:true,archive:false} |orderBy: '-notes':true |filter: searchText" >
-            <img  ng-click="showAdvanced($event,note);" ng-src="{{note.image}}" class="md-card-image">
-           <div style="position:absolute;margin-left: 233px;" ng-click="updatePin(note);" style="height:18px;width:18px;" >
-          <img ng-if="note.pin === true && note.image"  src="images/bluepin.svg"/>
-            <img ng-if="note.pin === true &&note.image===null" src="images/bluepin.svg"/>
-               <md-tooltip>Pin Note</md-tooltip></div>
 
-            <div class="tit1"><strong>{{note.title}}</strong></div>
-                    <md-card-content class="center" class="placesize" ng-click="showAdvanced($event,note)">
-                    <div contenteditable ng-bind-html="note.description"></div>
-                    </md-card-content>
-                    <div  layout="row">
-                        <md-chips ng-if="note.reminderDate"  ng-mouseover="enableEdit(note)"  ng-mouseleave="disableEdit(note)">
-                            <md-chip class="chip"><span class="chipstyle">{{note.reminderDate |dateformat}}</span>
-                              <span ng-click="removeReminder(note)" class="chip"><md-icon><i class="material-icons">close</i></md-icon></span ></md-chip>
+  <md-subheader ng-if="pinned.length > 0"><strong style="margin-left:86px;">Pinned</strong> </md-subheader>
+  <div layout="row" layout-align="center center" layout-wrap data-ng-init="getAllNote()">
+    <md-card  class="dashboard" style="background-color:{{note.color}};width:250px;position:relative" ng-repeat="note in notes |filter:{trash:false,pin:true,archive:false} |orderBy: '-notes':true |filter: searchText as pinned">
+      <img ng-click="showAdvanced($event,note);" ng-src="{{note.image}}" class="md-card-image">
+      <div ng-click="updatePin(note);" style="height:18px;width:18px;position:absolute;right: 0%;">
+        <img ng-if="note.pin === true && note.image" src="images/bluepin.svg" />
+        <img ng-if="note.pin ===true && note.image===null" src="images/bluepin.svg" />
+        <md-tooltip>Pin Note</md-tooltip>
+      </div>
+      <div class="tit1" ng-click="showAdvanced($event,note)"><strong>{{note.title}}</strong></div>
+      <md-card-content class="center" class="placesize" ng-click="showAdvanced($event,note)">
+        <div contenteditable ng-bind-html="note.description"></div>
+      </md-card-content>
+      <div layout="row">
+        <md-chips ng-if="note.reminderDate" ng-mouseover="enableEdit(note)" ng-mouseleave="disableEdit(note)">
+          <md-chip class="chip"><span class="chipstyle">{{note.reminderDate |dateformat}}</span>
+            <span ng-click="removeReminder(note)" class="chip"><md-icon><i class="material-icons">close</i></md-icon></span ></md-chip>
                         </md-chips>
                       </div>
                       <div layout="row" ng-if="note.listOfLabels" layout-wrap layout-align="start space-around">
-                        <md-chips ng-mouseover="enableEdit(label)"  ng-mouseleave="disableEdit(label)" ng-repeat="label in note.listOfLabels">
-                            <md-chip  class="chip"><span class="chip" ng-show="label.edit" >{{label.name}}</span><md-icon ng-click="removeLabelOnNote(label,note)"><i class="material-icons">close</i></md-icon></md-chip>
-                        </md-chips>
-                     </div>
-                     <div layout="row"  ng-if="note.collaboratedUser" ng-repeat="user in note.collaboratedUser" style="width:40px;height:40px;border-radius:50px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; ">
-                             <md-tooltip>{{user.emailId}}</md-tooltip>
-                       <img src="{{user.profilepicImage}}" style="width:100%;border-radius:50%">
-                     </div>
-                        <icon></icon>
+                        <md-chips  ng-repeat="label in note.listOfLabels">
+                            <md-chip  class="chip"><span class="chip"  >{{label.name}}</span>
+            <md-icon ng-click="removeLabelOnNote(label,note)"><i class="material-icons">close</i></md-icon>
+          </md-chip>
+        </md-chips>
+      </div>
+      <div layout="row">
+        <div ng-if="note.collaboratedUser" ng-repeat="user in note.collaboratedUser" style="width:40px;height:40px;border-radius:50px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; ">
+          <md-tooltip>{{user.emailId}}</md-tooltip>
+          <img ng-click="showCollaborator(note)" src="{{user.profilepicImage}}" style="width:100%;border-radius:50%">
+        </div>
+      </div>
+      <icon></icon>
+      <urlimage></urlimage>
+    </md-card>
+  </div>
 
-                        <urlimage></urlimage>
-
-                </md-card>
-</div>
-
-<div  style="postion:relative">
-  <md-subheader style="margin-left:295px;" id="header-btn" class="pinother" ><strong>Others</strong> </md-subheader>
-</div>
-  <div  layout="row"  layout-align="center end" layout-wrap data-ng-init="getAllNote()" style="padding-left: 211px;padding-right: 200px;">
-        <md-card  class="dashboard"  style="background-color:{{note.color}};width:250px;margin-top: 50px;"  ng-repeat="note in notes |filter:{trash:false,pin:false,archive:false} |orderBy: '-notes':true |filter: searchText">
-  <img  ng-click="showAdvanced($event,note);" ng-src="{{note.image}}" class="md-card-image">
-          <span style="position:absolute;"  ng-click="updatePin(note)" >
+    <md-subheader style="margin-left:86px;" id="header-btn" class="pinother" ><strong>Others</strong> </md-subheader>
+  <div layout="row" layout-align="center center" layout-wrap data-ng-init="getAllNote()">
+    <md-card class="dashboard" style="background-color:{{note.color}};width:250px;margin-top: 50px;position:relative" ng-repeat="note in notes |filter:{trash:false,pin:false,archive:false} |orderBy: '-notes':true |filter: searchText">
+      <img ng-click="showAdvanced($event,note);" ng-src="{{note.image}}" class="md-card-image">
+      <div style="position:absolute;right:0%" ng-click="updatePin(note)">
               <img ng-if="note.image===null && note.pin === false"  src="images/pin0.svg" style="padding-left: 225px;" >
               <img ng-if="note.image!=null && note.pin=== false" src="images/pin0.svg" style="padding-left: 225px;">
                <md-tooltip>Pin Note</md-tooltip>
-             </span>
+             </div>
 
-        <span ng-click="showAdvanced($event,note)">
+      <span ng-click="showAdvanced($event,note)">
           <div contenteditable class="dashOthr1"><strong>{{note.title}}</strong></div>
         </span>
 
-                  <md-card-content ng-click="showAdvanced($event,note)">
-                     <div  contenteditable class="dashOthr2">{{note.description}}</div>
-                  </md-card-content>
-                  <div  layout="row" >
-                      <md-chips ng-if="note.reminderDate">
-                          <md-chip class="chip"><span class="chipstyle">{{note.reminderDate | dateformat}}</span>
-                            <md-button   class="md-icon-button" ng-click="removeReminder(note)" class="chip"><md-icon><i class="material-icons">close</i></md-icon></md-button ></md-chip>
-                      </md-chips>
-                    </div>
-                    <div layout="row" ng-if="note.listOfLabels" layout-wrap layout-align="start space-around">
-                      <md-chips ng-mouseover="enableEdit(label)"  ng-mouseleave="disableEdit(label)" ng-repeat="label in note.listOfLabels">
-                          <md-chip  class="chip"><span class="chip" ng-show="label.edit" >{{label.name}}</span><md-icon ng-click="removeLabelOnNote(label,note)"><i class="material-icons">close</i></md-icon></md-chip>
-                      </md-chips>
-                   </div>
-                    <div layout="row"  ng-if="note.collaboratedUser" ng-repeat="user in note.collaboratedUser"  style="width:40px;height:40px;border-radius:50px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; ">
-                           <div ng-repeat="user in note.collaboratedUser">
-                            <md-tooltip>{{user.emailId}}</md-tooltip>
-                      <img src="{{user.profilepicImage}}" style="width:100%;border-radius:50%"/>
-                    </div>
-                    </div>
-                                        <icon></icon>
-                      <urlimage></urlimage>
+      <md-card-content ng-click="showAdvanced($event,note)">
+        <div contenteditable>{{note.description}}</div>
+      </md-card-content>
+      <div layout="row">
+        <md-chips ng-if="note.reminderDate">
+          <md-chip class="chip"><span class="chipstyle">{{note.reminderDate | dateformat}}</span>
+            <md-button class="md-icon-button" ng-click="removeReminder(note)" class="chip">
+              <md-icon><i class="material-icons">close</i></md-icon>
+            </md-button>
+          </md-chip>
+        </md-chips>
+      </div>
+      <div layout="row" ng-if="note.listOfLabels" layout-wrap layout-align="start space-around">
+        <md-chips ng-repeat="label in note.listOfLabels">
+          <md-chip class="chip"><span class="chip" >{{label.name}}</span>
+            <md-icon ng-click="removeLabelOnNote(label,note)"><i class="material-icons">close</i></md-icon>
+          </md-chip>
+        </md-chips>
+      </div>
+      <div layout="row" ng-if="note.collaboratedUser" ng-repeat="user in note.collaboratedUser" style="width:40px;height:40px;border-radius:50px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; ">
+        <div ng-repeat="user in note.collaboratedUser">
+          <md-tooltip>{{user.emailId}}</md-tooltip>
+          <img src="{{user.profilepicImage}}" style="width:100%;border-radius:50%" />
+        </div>
+      </div>
+      <icon></icon>
+      <urlimage></urlimage>
 
-              </md-card>
-    </div>
+    </md-card>
+  </div>
+</div>
 </div>
