--- a/fundooApp/templates/urlimage.html
+++ b/fundooApp/templates/urlimage.html
@@ -5,16 +5,16 @@
 			<a ng-href="{{urlData.url}}" target="_blank">
 
 				<div class="row"
-					style="margin-right: 0px; margin-left: 0px; border: 1px solid grey">
+					style="margin-right: 0px; margin-left: 0px; border: 1px solid grey;position:relative;">
           <div><img src"images/gotoLink.svg" style="height:15px;width:15px;margin-left:233px;"/><md-tooltip>Go to link</md-tooltip></div>
-					<div class="col-sm-4 col-md-4 col-xs-4" style="padding: 0px">
-						<img ng-src="{{urlData.imageUrl}}" style="height:50px;width:80px;margin-bottom: 15px;">
+					<div class="col-sm-4 col-md-4 col-xs-4" style="padding:0px;">
+						<img ng-src="{{urlData.imageUrl}}" style="height:50px;width:80px;margin-top:-16px;">
 					</div>
           <div></div>
 						<div  class="md-truncate" ng-bind="urlData.title"
-							style="font-size: 14px; color:black;padding-left: 88px;margin-top:-63px;"></div>
+							style="font-size: 14px; color:black;padding-left: 83px;margin-top: -48px;"></div>
 						<div ng-bind="urlData.domain"
-							style="font-size: 15px;color:grey;padding-left: 90px;margin-top:15px; "></div>
+							style="font-size: 15px;color:black;padding-left: 84px;margin-top:16px; "></div>
 					</div>
 				</div>
 			</a>
